# gkvp

./: README.md  README_for_namelist.txt  Version_memo.txt
benchmarks/: Benchmarks_Note.md
extra_tools/backup/performance_analysis/: calc_scaling.sh  fujitsu_fapppx.sh  fujitsu_fipppx.sh  plot_scaling.gn  v08create_rankmap.f90  v08create_rankmap.py
lib/: Bessel0_Zeros.f90  gkvp_math_MATRIX.f90  gkvp_math_MKLNAG.f90  gkvp_math_SSL2.f90  gkvp_math_portable.f90
run/: Makefile  diff.txt  gkvp_namelist  shoot  shoot_flow  sub.q
run/backup/: Makefile_flow  Makefile_fugaku  Makefile_fugaku_old  Makefile_ito  Makefile_jfrs  Makefile_ofp  Makefile_p-srv  Makefile_ps_subA  Makefile_ps_sx  Makefile_ubuntu  Makefile_ubuntu_old  gkvp_namelist_1sp  gkvp_namelist_2sp  gkvp_namelist_3sp  gkvp_namelist_4sp  shoot_flow  shoot_fugaku  shoot_ito  shoot_jfrs  shoot_jfrs_CrayPAT  shoot_mac  shoot_ofp  shoot_p-srv  shoot_ps_subA  shoot_ps_sx  shoot_ubuntu  sub.q_flow  sub.q_fugaku  sub.q_ito  sub.q_jfrs  sub.q_mac  sub.q_ofp  (+4 more)
src/: gkvp_advnc.f90  gkvp_bndry.f90  gkvp_clock.f90  gkvp_colli.f90  gkvp_colliimp.f90  gkvp_colliimp_SoA.f90  gkvp_dtc.f90  gkvp_exb.f90  gkvp_f0.56_advnc_tune_nec1.f90  gkvp_f0.56_bndry_tune_nec1.f90  gkvp_f0.56_colli_tune_nifs.f90  gkvp_f0.56_exb_tune2r_0813.f90  gkvp_f0.56_fft_fftw_tune2r_0813.f90  gkvp_f0.56_zfilter_tune_nec1.f90  gkvp_fft_fftw.f90  gkvp_fileio_fortran.f90  gkvp_fileio_netcdf.f90  gkvp_fileio_zarr.f90  gkvp_fld.f90  gkvp_freq.f90  gkvp_geom.f90  gkvp_header.f90  gkvp_igs.f90  gkvp_intgrl.f90  gkvp_main.f90  gkvp_mpienv.f90  gkvp_out.f90  gkvp_ring.f90  gkvp_set.f90  gkvp_shearflow.f90  gkvp_tips.f90  gkvp_trans.f90  gkvp_vmecbzx.f90  gkvp_vmecin.f90  gkvp_zfilter.f90
(+40 files in other folders)
